# rusty-kv-cli

./: .clang-format  .env  .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  RnD.md  config.toml  makefile
.bin/: cli
.cache/clangd/index/: argument.cpp.567E5F5199C6FF63.idx  argument.hpp.E92F693333A62C9E.idx  client.cpp.49DDEECB2523B73E.idx  client.hpp.3F2BF1D395D8DFB2.idx  command.cpp.AD1AE25BF434C410.idx  connect.cpp.2355D0BBE3C35BD9.idx  include.hpp.0F32FF42B05EC4C0.idx  logger.hpp.CAA4C9338C4DC3E7.idx  main.cpp.B00B8D949462A928.idx  resp_encoder.cpp.B262EF76972929DF.idx  resp_encoder.hpp.E5CAC135CE306D77.idx  uri_parser.cpp.99C6CFF894D76B56.idx  utils.hpp.8ADC039F45213630.idx
cli/: README.md  main.cpp
cli/client/: client.cpp  client.hpp
cli/include/: include.hpp
cli/utils/: command.cpp  connect.cpp  resp_encoder.cpp  resp_encoder.hpp  utils.hpp
docs/html/: annotated.html  annotated_dup.js  argument_8cpp.html  argument_8cpp.js  argument_8cpp__incl.map  argument_8cpp__incl.md5  argument_8cpp_source.html  argument_8hpp.html  argument_8hpp.js  argument_8hpp__dep__incl.map  argument_8hpp__dep__incl.md5  argument_8hpp__incl.map  argument_8hpp__incl.md5  argument_8hpp_source.html  classKvClient-members.html  classKvClient.html  classKvClient.js  classKvClient__coll__graph.map  classKvClient__coll__graph.md5  classKvConnectionInfo-members.html  classKvConnectionInfo.html  classKvConnectionInfo.js  classKvConnectionInfo__coll__graph.map  classKvConnectionInfo__coll__graph.md5  classes.html  client_8cpp.html  client_8cpp__incl.map  client_8cpp__incl.md5  client_8cpp_source.html  client_8hpp.html  client_8hpp.js  client_8hpp__dep__incl.map  client_8hpp__dep__incl.md5  client_8hpp__incl.map  client_8hpp__incl.md5  client_8hpp_source.html  command_8cpp.html  command_8cpp.js  command_8cpp__incl.map  command_8cpp__incl.md5  (+90 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  (+28 more)
src/: main.cpp  main.rs
src/client/: client.cpp  client.hpp
src/commands/: echo.rs  executor.rs  help.rs  lib.rs  mod.rs  ping.rs  set.rs  utils.rs
src/include/: argument.hpp  client.hpp  include.hpp  logger.hpp  resp.hpp  utils.hpp
src/resp/: handler.rs  mod.rs  parser.rs  value.rs
src/utils/: argument.cpp  argument.hpp  command.cpp  connect.cpp  logger.hpp  logger.rs  mod.rs  network.rs  resp_decoder.cpp  resp_encoder.cpp  resp_encoder.hpp  settings.rs  uri_parser.cpp  utils.hpp
