[package]
name = "rusty-kv-store"
version = "0.1.0"
authors = ["Piush Bose <dev.bosepiush@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
dotenv = "0.15.0"
log = "0.4.27"
simple_logger = "5.0.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
