[package]
name = "rusty-kv-store"
version = "0.1.0"
authors = ["Piush Bose <dev.bosepiush@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                             # error handling
bytes = "1.3.0"                                               # helps manage buffers
config = { version = "0.15.11", features = ["toml"] }         # config file parsing
dotenv = "0.15.0"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
simple_logger = { version = "5.0.0", features = ["colored"] }
thiserror = "1.0.32"                                          # error handling
time = "0.3.41"
tokio = { version = "1.23.0", features = ["full"] }           # async networking
